      (John Arbash Meinel, #239933)

    * You can now compare file revisions in Windows diff programs from 
      Cygwin Bazaar.
      (Matt McClure, #209281)

    * revision_history now tolerates mainline ghosts for Branch format 6.
      (Aaron Bentley, #235055)

  DOCUMENTATION:

    * Updated developer documentation.
      (Martin Pool)

  TESTING:

   * ``TestCaseWithTransport.make_branch_and_tree`` tries harder to return
     a tree with a ``branch`` attribute of the right format.  This was
     preventing some ``RemoteBranch`` tests from actually running with
     ``RemoteBranch`` instances.  (Andrew Bennetts)

  API CHANGES:

    * Removed ``Repository.text_store``, ``control_store``, etc.  Instead,
      there are new attributes ``texts, inventories, revisions,
      signatures``, each of which is a ``VersionedFiles``.  See the
      Repository docstring for more details.
      (Robert Collins)

    * ``Branch.pull`` now accepts an ``_override_hook_target`` optional
      parameter.  If you have a subclass of ``Branch`` that overrides
      ``pull`` then you should add this parameter.  (Andrew Bennetts)

    * ``Tree.print_file`` and ``Repository.print_file`` are deprecated.
      These methods are bad APIs because they write directly to sys.stdout.
      bzrlib does not use them internally, and there are no direct tests
      for them. (Alexander Belchenko)

  INTERNALS:

    * ``cat`` command no longer uses ``Tree.print_file()`` internally.
      (Alexander Belchenko)

    * New ``versionedfile.KeyMapper`` interface to abstract out the access to
      underlying .knit/.kndx etc files in repositories with partitioned
      storage. (Robert Collins)

    * Obsolete developer-use command ``weave-join`` has been removed.
      (Robert Collins)

    * ``RemoteToOtherFetcher`` and ``get_data_stream_for_search`` removed,
      to support new ``VersionedFiles`` layering.
      (Robert Collins)


bzr 1.6beta2 2008-06-10
-----------------------
